<resources>
    <string name="app_name">Project Heart</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">Monitor Connection Setup</string>
    <string name="second_fragment_label">EKG Processing</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="waiting">Waiting....</string>
    <string name="connect">Connect</string>
    <string name="change_monitor_config">Config</string>
    <string name="update">Upload</string>
    <string name="ssid">SSID</string>
    <string name="password">Password</string>
    <string name="prev_"><![CDATA[<]]></string>
    <string name="next_"><![CDATA[>]]></string>
    <string name="exit">exit</string>
    <string name="current">current</string>
    <string name="status_inactive">Status : Inactive</string>
    <string name="enable_near_real_time_processing">Enable n-realtime processing</string>
    <string name="store_data_in_sdc_to_process_later_low_memory">Store ECG in SDC</string>
    <string name="mem_usage_freq_3sec_s">MEM Usage (freq 3sec) : %1$s</string>
    <string name="cpu_usage_freq_3sec_1_s">CPU Usage (freq 3sec) : %1$s</string>
    <string name="results">Select mode ?</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="enables_values_in_graph">enables values in graph</string>
    <string name="enables_circles_in_graph">enables circles in graph</string>
    <string name="analysis_results">Analysis Results</string>
    <string name="normal_beats_0">Non Ectopic beats (Normal beats) : %.2f percent of %d samples.</string>
    <string name="supraventrical_beats_1">Supraventrical ectopic beats : %.2f percent of %d samples.</string>
    <string name="ventricular_beats_2">Ventricular ectopic beats : %.2f percent of %d samples.</string>
    <string name="fusion_beats_3">Fusion beats : %.2f percent of %d samples.</string>
    <string name="unknown_beats_4">Unknown Beats : %.2f percent of %d samples.</string>
    <string name="possible_disease_details">Possible Issues :</string>
    <string name="unknown">Unknown.. but really?\n just a test right?</string>
</resources>